navbar: Fix menu overflow issue

--- a/source/css/layout/_partials/navbar.styl
+++ b/source/css/layout/_partials/navbar.styl
@@ -264,6 +264,8 @@ $logo-image-box-height = 47px
     transform-origin top
     z-index $z-index-2
     opacity 0
+    max-height 100vh
+    overflow-y auto
     transition-t('transform,opacity', '0,0.1', '0.38,0.38', 'ease,ease')
 
     .navbar-drawer-show &
